2002-04-17  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/web/static.py, twisted/tap/web.py: Added a new feature
	that allows requests for /foo to return /foo.extension, which is
	disabled by default. If you want a --static webserver that
	uses this feature, use 'mktap web --static <dir> --allow_ignore_ext'.

2002-04-14  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

	* HTTP 1.1 now supports persistent and pipelined connections.

	User-visible API changes:
	- Request.content is now a file-like object, instead of a string.
	- Functions that incorrectly used Request.received instead of 
	  Request.getAllHeaders() will break.
	- sendHeader, finishHeaders, sendStatus are all hidden now.

2002-04-12  Kevin Turner  <acapnotic@twistedmatrix.com>

	* twisted/coil/plugins/tendril.py (TendrilConfigurator): New coil
	configurator for words.tendril.

2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>

	* .: Releasing Twisted 0.17.0

2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/bugs: Gone. Separate plugin package.
	* twisted/eco: Gone. The king is dead. Long live the king!
	(eco is no longer going to be developed, Pyrex has obviated it.)

2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/protocols/irc.py: Some fix-ups to IRCClient and
	DccFileReceive, from Joe Jordan (psy).

2002-04-10  Chris Armstrong  <carmstro@twistedmatrix.com>

	* twisted/reality: Gone. This is now in a completely separate plugin
	package.

2002-04-09  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

        * win32 process support seems to *finally* be working correctly. Many
        thanks to Drew Whitehouse for help with testing and debugging.

2002-04-08  Itamar Shtull-Trauring  <itamarst@twistedmatrix.com>

        * coil refactored yet again, this time to use components and adapters.
        The design is now much cleaner.

2002-04-08  Glyph Lefkowitz  <glyph@zelda.twistedmatrix.com>
