@@ -81,14 +81,14 @@ Note that you should never have leading indentation inside a &lt;pre&gt; block -
 <h3>"shell"</h3>
 <pre>
     &lt;pre class="shell"&gt;
-    $ mktap web -s /var/www
+    $ mktap web --path /var/www
     &lt;/pre&gt;
 </pre>
 
 <hr />
 
 <pre class="shell">
-$ mktap web -s /var/www
+$ mktap web --path /var/www
 </pre>
 <hr />
 
